<resources>
    <string name="app_name">FoodApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_food_app">My Food App</string>
    <string name="my_food_app_intro">Hungry? We\'ve got you covered. Welcome!</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="don_t_you_have_an_account_sign_up">Don\'t you have an account? Sign up</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="enter_code">Enter code</string>
    <string name="check_your_email_for_code_or">Check your email for code or</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>

</resources>