<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.VerificationFragment">

    <ImageView
        android:layout_margin="10dp"
        android:id="@+id/imgBackVerification"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:src="@drawable/ic_back" />

    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_verification_code"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"
        android:textStyle="bold" />

    <EditText
        android:layout_margin="10dp"
        android:id="@+id/edtVerificationCode"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="number"
        android:hint="@string/enter_code"
        android:gravity="center"
        android:maxLength="6"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/helpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_your_email_for_code_or"
        android:textSize="16sp"
        android:textColor="#6C6B6B"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/tvResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Resend"
        android:textSize="16sp"
        android:textColor="#FF0000"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="8dp" />


    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/btn_next_verification"
        android:layout_gravity="center"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="Next"
        android:textColor="#FFFFFF"
        android:backgroundTint="#000000"
        android:textSize="20sp" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:indeterminateTint="@color/green"
        android:layout_gravity="center"/>

</LinearLayout>